# harp.device.white-rabbit

./: .gitmodules  README.md  design_notes.md  device.yml
firmware/: CMakeLists.txt  README.md
firmware/inc/: config.h  uart_nonblocking.h  white_rabbit_app.h
firmware/src/: main.cpp  uart_nonblocking.cpp  white_rabbit_app.cpp
hardware/board/: README.md
hardware/board/clock_sync_16/: clk_outputs_0_thru_7.kicad_sch  clk_outputs_8_thru_16.kicad_sch  clock_sync_16.kicad_pcb  clock_sync_16.kicad_pro  clock_sync_16.kicad_sch  rp2040_with_usb.kicad_sch
hardware/board/usb_isolated/: board_power.kicad_sch  isolated_usb_rp2040.kicad_sch  sma_ttl_out.kicad_sch  usb_isolated.kicad_pcb  usb_isolated.kicad_pro  usb_isolated.kicad_sch
hardware/board/usb_powered_small/: rp2040_with_usb.kicad_sch  usb_powered_small.kicad_pcb  usb_powered_small.kicad_pro  usb_powered_small.kicad_sch
hardware/enclosure/exports/dxfs/offset/: bottom_lid_offset.DXF  top_lid_offset.DXF
hardware/enclosure/exports/dxfs/original/: bottom_lid.DXF  top_lid.DXF
hardware/enclosure/exports/stls/: case_walls.STL  enclosure_walls.STL
software/bonsai/: device.yml
software/bonsai/AllenNeuralDynamics.WhiteRabbit/: device.yml
software/bonsai/AllenNeuralDynamics.WhiteRabbit/Generators/: Generators.csproj
software/bonsai/AllenNeuralDynamics.WhiteRabbit/Interface/AllenNeuralDynamics.WhiteRabbit/: AllenNeuralDynamics.WhiteRabbit.csproj  AsyncDevice.Generated.cs
software/bonsai/AllenNeuralDynamics.WhiteRabbit/Interface/AllenNeuralDynamics.WhiteRabbit/Properties/: AssemblyInfo.cs
software/bonsai/Generators/: Generators.csproj
software/bonsai/Interface/: AllenNeuralDynamics.WhiteRabbit.sln
software/bonsai/Interface/AllenNeuralDynamics.WhiteRabbit/: AllenNeuralDynamics.WhiteRabbit.csproj  AsyncDevice.Generated.cs  Device.Generated.cs
software/pyharp/: enable_aux_uart.py  enable_pps.py  enable_slow_uart.py  read_connected_devices.py  wait_for_counter_msg.py
